update dependencies and replace Spock tests by JUnit5 tests